--- a/client/src/components/Bet/BetGroup.css
+++ b/client/src/components/Bet/BetGroup.css
@@ -15,3 +15,9 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 720px) {
+    .BetGroup__matches {
+        display: static;
+    }
+  }
